--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -7,6 +7,14 @@ body {
     color: white;
 }
 
+@font-face {
+    font-family: "MazzardM-Medium";
+    src: url("../assets/fonts/MazzardM-Medium.woff2") format("woff2"),
+        url("../assets/fonts/MazzardM-Medium.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
 .phone-hide {
     display: none;
 }
@@ -25,7 +33,7 @@ nav {
 nav h2 {
     margin: auto;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "MazzardM-Medium";
     margin-left: 20px;
     font-size: 1.125rem;
 }
@@ -44,16 +52,16 @@ nav img {
     position: absolute;
     bottom: 0;
     left: 20px;
-    z-index:555;
+    z-index: 555;
     color: white;
     text-transform: uppercase;
-    font-family: Helvetica, sans-serif;
+    font-family: "MazzardM-Medium";
     visibility: hidden;
     letter-spacing: 8px;
 }
 
 .video-js {
-    position: relative ;
+    position: relative;
     width: 100%;
     height: 100vh;
 }
@@ -64,7 +72,7 @@ nav img {
     top: 0;
 }
 
-#progress{
+#progress {
     background-color: #fff;
     height: 4px;
     width: 0;
@@ -88,6 +96,6 @@ nav img {
         margin: auto;
         text-align: center;
         width: 90%;
-        font-family: Helvetica, sans-serif;
+        font-family: "MazzardM-Medium";
     }
 }
