--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -125,7 +125,7 @@ nav img {
     height: 20px;
     border-radius: 50px;
     border: solid 2px white;
-    background-color: black;
+    background-color: transparent;
 }
 @-webkit-keyframes pulse {
     0% {
