--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -135,6 +135,11 @@ nav img {
     border: solid 2px white;
     background-color: transparent;
 }
+
+.rond:nth-of-type(4){
+    margin-right: -25px;
+}
+
 @-webkit-keyframes pulse {
     0% {
         opacity: 1;
