--- a/ice-watch/stylesheet/main.css
+++ b/ice-watch/stylesheet/main.css
@@ -23,6 +23,30 @@ body {
     font-style: normal;
 }
 
+@-webkit-keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes pulse {
+0% {
+ opacity: 1;
+}
+50% {
+ opacity: 0.5;
+}
+100% {
+ opacity: 1;
+}
+}
+
 .phone-hide {
     display: none;
 }
@@ -142,28 +166,70 @@ nav img {
     margin-right: 20px;
 }
 
-@-webkit-keyframes pulse {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0.5;
-    }
-    100% {
-        opacity: 1;
-    }
+.exp-ice {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    border: solid 3px red;
 }
 
-@keyframes pulse {
-0% {
- opacity: 1;
+@keyframes fly { 0% {
+    transform: translate(0, 67vh);
 }
 50% {
- opacity: 0.5;
+    transform: translate(0, 60vh);
 }
 100% {
- opacity: 1;
+    transform: translate(0, 67vh);
 }
+}
+
+video {
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.infos-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+} 
+
+#iceberg{
+    width: 32%;
+    transition: margin 0.5s ease-in;
+    margin-top: 0;
+    animation: fly 2s ease-in-out infinite;
+}
+
+#iceberg:hover{
+    margin-top: -125vh;
+}
+
+.txt{
+    color: white;
+    font-family: "MazzardM-Medium";
+    width: 30%;
+    font-size: 1.2rem;
+    height: 580px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-right: 5%;
+}
+
+.info{
+    visibility: hidden;
+    opacity: 0;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, .2);
+    transition: visibility 1s, opacity 0.5s ease-in;
 }
 
 @media screen and (max-width: 750px) {
